✨(feat): Initializes the project's base structure and configures the development environment
- build.gradle.kts: Creates and configures the file for essential dependencies
- application.properties: Configures the project's base structure
- Initial folder structure: Prepares the project for a hexagonal architecture
- Database: Validates the PostgreSQL connection in a local environment
- Validates successful application startup in a local environment with Spring Boot 4 and Java 21

Implemented features:
✅ Basic configuration and startup of a Spring Boot project with Gradle and a PostgreSQL connection
✅ Preparation and validation for hexagonal architecture implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=hex-arch-airplane-ticket-booking
+
+server.port=${SERVER_PORT:8085}
+server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/airline/api/v1}
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/db_flight_ticket_booking_dev}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.pool-name=AirlineHikariPool
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:true}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.open-in-view=false
+
+spring.jackson.date-format=dd/MM/yyyy HH:mm:ss
+spring.jackson.time-zone=America/Bogota
+#spring.jackson.serialization.write-dates-as-timestamps=false
+
+#logging.level.root=INFO
+#logging.level.com.airline=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.pattern.console=%d{dd/MM/yyyy HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.file.name=logs/airline-app.log
+#logging.file.max-size=10MB
+#logging.file.max-history=30
